# bittrex

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  README.md  bittrex.cabal  bittrex.nix  default.nix
example/: Main.hs
src/: Bittrex.hs  Bittrex.hs~
src/Bittrex/: API.hs  Internal.hs  Types.hs  Util.hs
