name:                bittrex
version:             0.1.0.0
synopsis:            API bindings to bittrex.com
description:         API bindings to bittrex.com
homepage:            https://github.com/dmjio/bittrex
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2017
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Bittrex
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       aeson
                     , base
                     , bytestring
                     , cryptohash-sha512
                     , http-client-tls
                     , lens
                     , lens-aeson
                     , text
                     , time
                     , wreq
