name:                bittrex
version:             0.1.0.0
synopsis:            API bindings to bittrex.com
description:         Haskell bindings to the Bittrex exchange
homepage:            https://github.com/dmjio/bittrex
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2017
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Bittrex
                       Bittrex.API
                       Bittrex.Types
                       Bittrex.Util
  other-modules:       Bittrex.Internal
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       aeson
                     , base < 5
                     , bytestring
                     , http-client-tls
                     , lens
                     , lens-aeson
                     , scientific
                     , SHA
                     , split
                     , text
                     , time
                     , wreq

source-repository head
  type:     git
  location: git://github.com/dmjio/bittrex.git