name:                  bittrex
version:               0.6.0.0
synopsis:              Bindings for the Bittrex API
description:           Haskell bindings to the Bittrex exchange
homepage:              https://github.com/dmjio/bittrex
license:               BSD3
license-file:          LICENSE
author:                David Johnson
maintainer:            djohnson.m@gmail.com
copyright:             © David Johnson 2017-2018
                     , © Remy Goldschmidt 2017-2018
category:              Web
build-type:            Simple
extra-source-files:    CHANGELOG.md
cabal-version:         >= 1.10

source-repository head
  type:     git
  location: git://github.com/dmjio/bittrex.git

library
  exposed-modules:     Bittrex
                       Bittrex.API
                       Bittrex.Types
                       Bittrex.Util
  other-modules:       Bittrex.Internal
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base < 5
                     , aeson
                     , bytestring
                     , http-client-tls
                     , lens
                     , lens-aeson
                     , scientific
                     , SHA
                     , split
                     , text
                     , time
                     , wreq
                     , flow

executable example
  main-is:             Main.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       bittrex
                     , base
                     , text
                     , turtle
